// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js","./a":"./a.js"}}',
    '/i.ts': '',
    '/a.ts': 'export const _ = 0'
  },
  entrypoints: [ '.' ]
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: []
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const _ = 0'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: '_',
            signature: {
              type: '0',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js","./a":"./a.js"}}',
    '/i.ts': 'export * as A from \\'./a.js\\'',
    '/a.ts': 'export const _ = 0'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './a.ts',
        exports: [
          {
            name: '_',
            signature: {
              type: '0',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './a.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'DrillableNamespaceEntrypoint'
    },
    {
      path: './a',
      module: {
        location: './a.ts',
        exports: [
          {
            name: '_',
            signature: {
              type: '0',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './a.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 4`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = 1\\n/** @internal */\\nexport const b = 2'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 5`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = 1\\nexport const _b = 2'
  },
  filterUnderscoreExports: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 6`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = 1\\nexport const _b = 2'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          },
          {
            name: '_b',
            signature: {
              type: '2',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 7`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = 1\\n          /** @internal */\\n          export const b = 2\\n          export const _c = 3\\n          /** @internal */\\n          export const _d = 4'
  },
  filterUnderscoreExports: true
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 8`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': '// @ts-expect-error Duplicate identifier\\n          export * as U from \\'./u.js\\'\\n          /** Shadow @category C */\\n          export namespace U {}',
    '/u.ts': '/** Nested */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'Shadow',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: true,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: {
                description: 'Nested',
                guide: undefined
              },
              docsProvenance: {
                description: {
                  shadowNamespace: false,
                  _tag: 'jsdoc'
                },
                guide: undefined
              },
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'Nested',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 9`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export * as U from \\'./u.js\\'',
    '/u.ts': '/** Nested */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'Nested',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: false,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: '[Circular]',
              docsProvenance: '[Circular]',
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'Nested',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 10`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': '// @ts-expect-error Duplicate identifier\\n          export * as U from \\'./u.js\\'\\n          /** Shadow @category C */\\n          export namespace U {}\\n          export const b = 1',
    '/u.ts': '/** Nested */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'Shadow',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: true,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: {
                description: 'Nested',
                guide: undefined
              },
              docsProvenance: {
                description: {
                  shadowNamespace: false,
                  _tag: 'jsdoc'
                },
                guide: undefined
              },
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'Nested',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          },
          {
            name: 'b',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 5
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 11`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = () => 1',
    '/i.md': 'M'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 12`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = () => 1',
    '/README.md': 'R'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 13`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export const a = () => 1',
    '/i.md': 'M',
    '/README.md': 'R'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'a',
            signature: {
              overloads: [
                {
                  typeParameters: [],
                  parameters: [],
                  returnType: 'number',
                  returnDoc: undefined,
                  throws: []
                }
              ],
              _tag: 'FunctionSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'function'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 14`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export * as U from \\'./u.js\\'',
    '/i.md': 'W',
    '/u.ts': '/** N */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'N',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: false,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: '[Circular]',
              docsProvenance: '[Circular]',
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'N',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 15`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export * as U from \\'./u.js\\'\\nexport const b = 2',
    '/i.md': 'M',
    '/u.ts': '/** N */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'N',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: false,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: '[Circular]',
              docsProvenance: '[Circular]',
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'N',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          },
          {
            name: 'b',
            signature: {
              type: '2',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 16`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': '// @ts-expect-error Duplicate identifier\\n          export * as U from \\'./u.js\\'\\n          /** S @category C */\\n          export namespace U {}',
    '/i.md': 'M',
    '/u.ts': '/** N */\\nexport const a = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'U',
            signature: {
              text: 'export * as U',
              _tag: 'TypeSignatureModel'
            },
            docs: {
              description: 'S',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: true,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: 'C',
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'namespace',
            module: {
              location: './u.ts',
              docs: {
                description: 'N',
                guide: undefined
              },
              docsProvenance: {
                description: {
                  shadowNamespace: false,
                  _tag: 'jsdoc'
                },
                guide: undefined
              },
              exports: [
                {
                  name: 'a',
                  signature: {
                    type: '1',
                    _tag: 'ValueSignatureModel'
                  },
                  signatureSimple: undefined,
                  docs: {
                    description: 'N',
                    guide: undefined
                  },
                  docsProvenance: {
                    description: {
                      shadowNamespace: false,
                      _tag: 'jsdoc'
                    },
                    guide: undefined
                  },
                  examples: [],
                  deprecated: undefined,
                  category: undefined,
                  tags: {},
                  sourceLocation: {
                    file: './u.ts',
                    line: 2
                  },
                  _tag: 'value',
                  type: 'const'
                }
              ]
            }
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 17`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': '/** foo \`bar\` */\\nexport type T = string'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        docs: {
          description: 'foo \`bar\`',
          guide: undefined
        },
        docsProvenance: {
          description: {
            shadowNamespace: false,
            _tag: 'jsdoc'
          },
          guide: undefined
        },
        exports: [
          {
            name: 'T',
            signature: {
              text: 'type T = string',
              _tag: 'TypeSignatureModel'
            },
            signatureSimple: undefined,
            docs: {
              description: 'foo \`bar\`',
              guide: undefined
            },
            docsProvenance: {
              description: {
                shadowNamespace: false,
                _tag: 'jsdoc'
              },
              guide: undefined
            },
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'type',
            type: 'type-alias'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`extractFromFiles({ files: { '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.j...) 18`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  files: {
    '/package.json': '{"name":"x","version":"0.0.0","exports":{".":"./i.js"}}',
    '/i.ts': 'export interface foo { (): number }\\nexport const foo = 1'
  }
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
{
  name: 'x',
  version: '0.0.0',
  entrypoints: [
    {
      path: '.',
      module: {
        location: './i.ts',
        exports: [
          {
            name: 'foo',
            signature: {
              text: 'interface foo { (): number }',
              _tag: 'TypeSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 1
            },
            _tag: 'type',
            type: 'interface'
          },
          {
            name: 'foo',
            signature: {
              type: '1',
              _tag: 'ValueSignatureModel'
            },
            signatureSimple: undefined,
            examples: [],
            deprecated: undefined,
            category: undefined,
            tags: {},
            sourceLocation: {
              file: './i.ts',
              line: 2
            },
            _tag: 'value',
            type: 'const'
          }
        ]
      },
      _tag: 'SimpleEntrypoint'
    }
  ],
  metadata: {
    extractedAt: {},
    extractorVersion: '0.1.0'
  }
}
╚══════════════════════════════════════════════════╝"
`;
